# covidflow

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  app.secrets.dev.ca2.yaml  app.secrets.prod.ca.yaml  app.yml  config.core.yml  config.yml  covidflow.code-workspace  docker-compose.yml  domain.core.yml  domain.en.yml  domain.fr.yml  domain.yml  endpoints.yml  job.secrets.dev.ca2.yaml  job.secrets.prod.ca.yaml  job.yml  mypy.ini  requirements-dev.txt
action-server/: .dockerignore  Dockerfile  Makefile  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
action-server/actions/: __main__.py  action_cheer_up.py  action_daily_ci_early_opt_out.py  action_daily_ci_recommendations.py  action_explain_pre_existing_conditions.py  action_initialize_daily_checkin.py  action_offer_daily_checkin.py  action_send_daily_checkin_reminder.py  action_set_risk_level.py  action_severe_symptoms_recommendations.py  action_suspect_mild_symptoms_exposure_final_recommendations.py  action_suspect_mild_symptoms_exposure_recommendations.py  action_suspect_moderate_symptoms_final_recommendations.py  action_suspect_moderate_symptoms_recommendations.py  action_suspect_no_symptoms_recommendations.py  action_tested_positive_maybe_cured_final_recommendations.py  action_tested_positive_no_symptoms_recommendations.py  action_tested_positive_not_cured_final_recommendations.py  action_visit_package.py  answers.py  assessment_common.py  assessment_form.py  checkin_return_form.py  constants.py  daily_ci_assessment_common.py  daily_ci_enroll_form.py  daily_ci_feel_better_form.py  daily_ci_feel_no_change_form.py  daily_ci_feel_worse_form.py  daily_ci_keep_or_cancel_form.py  home_assistance_form.py  province_age_form.py  question_answering_form.py  self_isolation_form.py  tested_positive_form.py
action-server/actions/lib/: assessment_persistence.py  environment.py  exceptions.py  hashids_util.py  persistence.py  phone_number_validation.py
action-server/alembic/: env.py
action-server/alembic/versions/: 00001_initial_db_setup.py  00002_test_profiles.py  00003_fix_test_profiles.py  2c2215d3e953_initial_db_setup.py
action-server/covidflow/: constants.py  setup_structlog.py
action-server/covidflow/actions/: action_ask_test_navigation__continue_error.py  action_check_task_allowed.py  action_daily_ci_early_opt_out.py  action_default_fallback.py  action_explain_preconditions.py  action_fallback.py  action_goodbye.py  action_greeting_messages.py  action_initialize_daily_checkin.py  action_qa_goodbye.py  action_returning_symptoms_not_worsened_recommendations.py  action_send_daily_checkin_reminder.py  action_send_validation_code.py  action_severe_symptoms_recommendations.py  action_suspect_mild_symptoms_exposure_final_recommendations.py  action_suspect_mild_symptoms_exposure_recommendations.py  action_suspect_moderate_symptoms_final_recommendations.py  action_suspect_moderate_symptoms_recommendations.py  action_suspect_no_symptoms_recommendations.py  action_test_navigation__anything_else.py  action_test_navigation_explanation.py  action_tested_positive_maybe_cured_final_recommendations.py  action_tested_positive_mild_moderate_symptoms_recommendations.py  action_tested_positive_no_symptoms_recommendations.py  action_tested_positive_not_cured_final_recommendations.py  action_unsupported_intent.py  action_visit_package.py  answers.py  (+18 more)
action-server/db/: assessment.py  base.py  reminder.py  utils.py
action-server/jobs/: send_reminders.py
action-server/tests/: action_helper.py  form_helper.py  test_action_cheer_up.py  test_action_daily_ci_early_opt_out.py  test_action_daily_ci_recommendations.py  test_action_goodbye.py  test_action_initialize_daily_checkin.py  test_action_send_daily_checkin_reminder.py  test_action_send_validation_code.py  test_action_set_risk_level.py  test_action_visit_package.py  test_assessment_common.py  test_assessment_form.py  test_daily_ci_enroll_form.py  test_daily_ci_feel_better_form.py  test_daily_ci_feel_no_change_form.py  test_daily_ci_feel_worse_form.py  test_daily_ci_keep_or_cancel_form.py  test_dummy.py
core/: .gitignore  Dockerfile  Dockerfile.fr  Makefile  credentials.yml  endpoints.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
core/channels/: __init__.py  setup_structlog.py
core/config/: config.core.yml  config.en.yml  config.fr.yml
core/core/: __init__.py  segment.py  setup_structlog.py
core/data/: nlu.en.md  nlu.fr.md  provinces.en.txt  provinces.fr.txt  rules.yml  stories.md
core/domain/: domain.core.yml  domain.en.yml  domain.fr.yml
core/policies/: unsupported_intent_policy.py
core/scripts/: prepare-training-data.sh  validate_domain.py
core/tests/: test_nothing.py
db-migration/: Dockerfile  alembic.ini  pyproject.toml  setup.cfg  setup.py
load-tests/: .env.example  Dockerfile  Makefile  pyproject.toml  run.sh  setup.cfg
load-tests/load_tests/: constants.py  runner.py  socketio_locustfile.py
(+366 files in other folders)
