[tool.poetry]
name = "covidflow-action-server"
version = "0.1.0"
description = "Rasa Action Server for covidflow"
authors = ["Nu Echo"]

[tool.poetry.dependencies]
rasa-integration-testing = "0.1.2"
aiohttp = "^3.6.2"
pydantic = "^1.4"
python = "^3.6"
rasa-sdk = "^1.9.0"
alembic = "0.9.8"
psycopg2-binary = "2.7.7"
structlog = "^20.1.0"
pytz = "^2020.1"
sqlalchemy = "~1.3.3"
sqlalchemy-stubs = "^0.3"
hashids = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "5.3.4"
pytest-cov = "2.8.1"
black = "19.10b0"
flake8 = "3.7.9"
isort = "^4.3.21"
mypy = "0.770"
pep8-naming = "0.10.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
