[tool.poetry]
name = "covidflow-action-server"
version = "0.1.0"
description = "Rasa Action Server for covidflow"
authors = ["Nu Echo"]

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
pydantic = "^1.4"
python = "^3.6"
rasa-sdk = "2.0.0a4"
alembic = "0.9.8"
psycopg2-binary = "2.7.7"
structlog = "^20.1.0"
pytz = "^2020.1"
sqlalchemy = "~1.3.3"
sqlalchemy-stubs = "^0.3"
hashids = "^1.2.0"
backoff = "^1.10.0"
toolz = "^0.10.0"
python-json-logger = "^0.1.11"
sanic = "^19.12.2"
googlemaps = "^4.4.0"
geopy = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "5.4.1" # 5.4.2 breaks pytest-asyncio markers
pytest-cov = "2.8.1"
black = "19.10b0"
flake8 = "3.7.9"
isort = "^4.3.21"
mypy = "0.770"
pep8-naming = "0.10.0"
pylama = "^7.7.1"
pytest-asyncio = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
