[tool.poetry]
name = "covidflow"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
alembic = "0.9.8"
importlib-metadata = "^1.6.0"
psycopg2 = "2.7.7"
pydantic = "^1.4"
python = "^3.6"
SQLAlchemy = "^1.3"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "3.7.9"
isort = "^4.3.21"
mypy = "0.770"
pep8-naming = "0.10.0"
pylama = "^7.7.1"
pytest = "5.3.4"
pytest-cov = "2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
