[tool.poetry]
name = "covidflow-load-tests"
version = "0.1.0"
description = "Load testing for covidflow"
authors = ["Nu Echo"]

[tool.poetry.dependencies]
python = "^3.6.8"
rasa-integration-testing = "0.1.2"
python-socketio = "^4.5.1"
locustio = "^0.14.6"

[tool.poetry.dev-dependencies]
pytest = "5.3.4"
pytest-cov = "2.8.1"
black = "19.10b0"
flake8 = "3.7.9"
isort = "^4.3.21"
mypy = "0.770"
pep8-naming = "0.10.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
